# kata-data-foodies

./: .gitignore  README.md  pyproject.toml
kata_data_foodies/: config.py  create_tables.py  etl.py  models.py  utils.py
